refactor: move task and ui class to package